# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
include/: App.h  NeuralNetwork.h
src/: App.cpp  NeuralNetwork.cpp  main.cpp
